--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,6 +27,14 @@ env:
     -Dwrap_mode=nofallback
     --force-fallback-for=fmt,jsoncpp
 
+  MESON_ARGS_MACOS: >-
+    -Dicmp-errors=disabled
+    -Dpkg_config_path=/opt/homebrew/opt/openal-soft/lib/pkgconfig
+    -Dwayland=disabled
+    -Dwindows-crash-dumps=disabled
+    -Dwrap_mode=nofallback
+    -Dx11=disabled
+
 jobs:
   mingw:
     runs-on: ubuntu-latest
@@ -132,3 +140,18 @@ jobs:
         with:
           name: q2pro-rr-linux-${{ matrix.cc }}-x86_64-${{env.GITHUB_SHA_SHORT}}
           path: installdir/
+
+  macos:
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Install dependencies
+        run: |
+          brew update
+          brew install meson sdl2 openal-soft libpng jpeg-turbo
+
+      - name: Build
+        run: |
+          meson setup ${{ env.MESON_ARGS }} ${{ env.MESON_ARGS_MACOS }} builddir
+          meson compile -C builddir
