Build with ‘-fno-trapping-math’.
(cherry picked from commit f362483f02831d998348fddb017cf6c948b83004)

--- a/meson.build
+++ b/meson.build
@@ -317,6 +317,7 @@ if cc.get_argument_syntax() == 'gcc'
     '-fsigned-char',
     '-fms-extensions',
     '-fno-math-errno',
+    '-fno-trapping-math',
     '-Wpointer-arith',
     '-Wformat-security',
     '-Werror=vla',
