Move game3_pmove into common

--- a/meson.build
+++ b/meson.build
@@ -20,6 +20,7 @@ common_src = [
   'src/common/fifo.c',
   'src/common/files.c',
   'src/common/game3_convert.c',
+  'src/common/game3_pmove.c',
   'src/common/natsort.c',
   'src/common/hash_map.c',
   'src/common/loc.c',
@@ -122,7 +123,6 @@ client_src = [
   'src/server/commands.c',
   'src/server/entities.c',
   'src/server/game.c',
-  'src/server/game3_proxy/game3_pmove.c',
   'src/server/game3_proxy/game3_proxy.c',
   'src/server/init.c',
   'src/server/main.c',
@@ -188,7 +188,6 @@ server_src = [
   'src/server/commands.c',
   'src/server/entities.c',
   'src/server/game.c',
-  'src/server/game3_proxy/game3_pmove.c',
   'src/server/game3_proxy/game3_proxy.c',
   'src/server/init.c',
   'src/server/main.c',
